--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,28 +1,86 @@
-* {
-    box-sizing: border-box;
-    margin: 0;
+body {
+  font-family: 'Rockwell', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 100%;
+
+  padding: 24px;
+  background: linear-gradient(100deg, #8bc7e1 25.87%, #edea89 100%);
+  text-align: center;
+}
+
+.search-form {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  padding: 25px 0 25px 0;
+
+ 
+  background: linear-gradient(to right, #194252,  #8ae2e5);
+  box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.5);
+}
+
+.search-form > input {
+  width: 300px;
+  height: 30px;
+  padding: 5px 5px 5px 15px;
+  font-size: 16px;
+  outline: none;
+  border: none;
+  border-radius: 5px;
+}
+
+.search-form > button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 5px;
+  width: 80px;
+  height: 40px;
+  font-size: 16px;
+  font-weight: 600;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.search-form > button:hover,
+.search-form > button:focus {
+  background-color: rgb(185, 224, 228);
+}
+
+.load-more {
+  width: 140px;
+  height: 40px;
+  margin-top: 50px;
+  margin-bottom: 30px;
+  margin-left: 50%;
+  transform: translateX(-50%);
+  font-size: 16px;
+  font-weight: 600;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  color: black;
+  background-color: gainsboro;
+}
+
+  .load-more:hover,
+  .load-more:focus {
+    color: black;
+    background-color: rgb(185, 224, 228);
   }
-  body {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    background-color: #FDFBFB;
-    color: #212121;
-  }
-  .load-more {
+
+  .load-more{
     display: none;
-  }
-  .search-form {
-    position: fixed;
-    height: 70px;
-    background: rgb(4, 49, 248);;
-    width:100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    top:0;
-  }
+  } 
+  
   .gallery {
     display: flex;
     flex-wrap: wrap;
@@ -30,57 +88,36 @@
     justify-content: center;
     margin-top:100px;
   }
+
   .photo-card {
     width:300px;
-    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.5);
+    border-radius: 5px;
+    overflow: hidden;
   }
+
   .photo-card:hover {
     cursor: pointer;
-    -webkit-box-shadow: 0px 32px 40px 7px rgba(0, 40, 255, 0.58);
-    -moz-box-shadow: 0px 32px 40px 7px rgba(0, 40, 255, 0.58);
-    box-shadow: 0px 32px 40px 7px rgba(0, 40, 255, 0.58);
+    box-shadow: 0px 32px 40px 7px  rgb(185, 224, 228);
   }
+
   .photo-image {
     width:300px;
     height: 200px;
     object-fit: cover;
   }
-  .load-more {
-    margin:0 auto;
-    margin-top: 20px;
-    padding: 5px;
-    background-color: rgb(4, 49, 248);
-    border-radius: 5px;
-    border: none;
-  }
-  .info {
+
+   .info {
     display: flex;
     justify-content: space-between;
     border: 2px solid #eee;
     border-top: none;
   }
+
   .info-item {
     display: flex;
     flex-direction: column;
     align-items: center;
-  }
-  input, button {
-    padding: 10px;
-    border-radius: 5px;
-    border: none;
-    gap: 5px;
-  }
-  button {
-   margin-left: 5px;
-   cursor: pointer;
-  }
-  button:hover {
-    background-color: rgb(15, 15, 98);
-   }
+  } 
 
-
-
-
-
-
-
+   
