--- a/src/css/style.css
+++ b/src/css/style.css
@@ -78,14 +78,10 @@ body {
     background-color: rgb(185, 224, 228);
   }
 
-   .load-more{
+   .load-more.is-hidden{
     display: none;
   } 
   
-.is-hidden {
-  display: none;
-}
-
   .gallery {
     display: flex;
     flex-wrap: wrap;
